[package]
name = "lindera-filter"
version = "0.27.0"
edition = "2021"
description = "Character and token filters for Lindera."
documentation = "https://docs.rs/lindera-filter"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
