[package]
name = "lindera-ipadic-builder"
version = "0.17.0"
edition = "2021"
description = "A Japanese morphological dictionary builder for IPADIC."
documentation = "https://docs.rs/lindera-ipadic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "ipadic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow = "1.0.58"
bincode = "1.3.3"
byteorder = "1.4.3"
clap = { version = "3.2.8", features = ["derive"] }
csv = "1.1.6"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
env_logger = "0.9.0"
glob = "0.3.0"
log = "0.4.17"
serde = "1.0.138"
yada = "0.5.0"

lindera-core = { version = "0.17.0", path = "../lindera-core" }
lindera-decompress = { version = "0.17.0", path = "../lindera-decompress" }
lindera-compress = { version = "0.17.0", path = "../lindera-compress", optional = true }
