[package]
name = "lindera-ipadic-builder"
version = "0.27.2"
edition = "2021"
description = "A Japanese morphological dictionary builder for IPADIC."
documentation = "https://docs.rs/lindera-ipadic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "ipadic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
encoding_rs.workspace = true
encoding_rs_io.workspace = true
env_logger.workspace = true
glob.workspace = true
log.workspace = true
serde.workspace = true
yada.workspace = true

lindera-compress = { workspace = true, optional = true }
lindera-core.workspace = true
lindera-decompress.workspace = true
