[package]
name = "lindera-ipadic-neologd-builder"
version = "0.32.1"
edition = "2021"
description = "A Japanese morphological dictionary builder for IPADIC NEologd."
documentation = "https://docs.rs/lindera-ipadic-neologd-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "dictionary", "builder", "ipadic", "neologd"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-dictionary-builder/compress"]

[dependencies]
anyhow.workspace = true

lindera-core.workspace = true
lindera-decompress.workspace = true
lindera-dictionary-builder.workspace = true
