[package]
name = "lindera-ipadic-neologd"
version.workspace = true
edition.workspace = true
description = "A Japanese morphological dictionary for IPADIC NEologd."
documentation = "https://docs.rs/lindera-ipadic-neologd"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = [
    "morphological",
    "analysis",
    "dictionary",
    "library",
    "ipadic-neologd",
]
categories.workspace = true
license.workspace = true

[features]
embedded-ipadic-neologd = []               # Embed IPADIC-NEologd dictionary in the binary
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
once_cell.workspace = true
serde_json.workspace = true

lindera-dictionary.workspace = true

[build-dependencies]
serde_json.workspace = true
tokio.workspace = true
lindera-dictionary = { workspace = true, features = ["build_rs"] }
