[package]
name = "lindera-ipadic-neologd"
version = { workspace = true }
edition = { workspace = true }
description = "A Japanese morphological dictionary for IPADIC NEologd."
documentation = "https://docs.rs/lindera-ipadic-neologd"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = [
    "morphological",
    "analysis",
    "dictionary",
    "japanese",
    "ipadic-neologd",
]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-ipadic-neologd = [] # Embed IPADIC-NEologd dictionary in the binary

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
csv = { workspace = true }
lindera-dictionary = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde_json = { workspace = true }
tokio = { workspace = true }
