[package]
name = "lindera-ipadic-neologd"
version = { workspace = true }
edition = { workspace = true }
description = "A Japanese morphological dictionary for IPADIC NEologd."
documentation = "https://docs.rs/lindera-ipadic-neologd"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = [
    "morphological",
    "analysis",
    "dictionary",
    "japanese",
    "ipadic-neologd",
]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-ipadic-neologd = [] # Embed IPADIC-NEologd dictionary in the binary

[dependencies]
lindera-dictionary = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
tokio = { workspace = true }
