[package]
name = "lindera-ipadic"
version = "0.45.0"
edition = "2024"
description = "A Japanese morphological dictionary for IPADIC."
documentation = "https://docs.rs/lindera-ipadic"
homepage = "https://github.com/lindera/lindera"
repository = "https://github.com/lindera/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "ipadic"]
categories = ["text-processing"]
license = "MIT"

[features]
ipadic = []
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
once_cell.workspace = true
serde_json.workspace = true

lindera-dictionary.workspace = true

[build-dependencies]
tokio.workspace = true
lindera-dictionary = { workspace = true, features = ["build_rs"] }
