[package]
name = "lindera-ipadic"
version = { workspace = true }
edition = { workspace = true }
description = "A Japanese morphological dictionary for IPADIC."
documentation = "https://docs.rs/lindera-ipadic"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "library", "ipadic"]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-ipadic = []                          # Embed IPADIC dictionary in the binary

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
csv = { workspace = true }
lindera-dictionary = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde_json = { workspace = true }
tokio = { workspace = true }
