[package]
name = "lindera-jieba"
version = { workspace = true }
edition = { workspace = true }
description = "A Chinese morphological dictionary for Jieba."
documentation = "https://docs.rs/lindera-jieba"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "jieba", "chinese"]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-jieba = []
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
csv = { workspace = true }
lindera-dictionary = { workspace = true }
once_cell = { workspace = true }
rkyv = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde_json = { workspace = true }
tokio = { workspace = true }
