[package]
name = "lindera-jieba"
version = { workspace = true }
edition = { workspace = true }
description = "A Chinese morphological dictionary for Jieba."
documentation = "https://docs.rs/lindera-jieba"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "jieba", "chinese"]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-jieba = [] # Embed Jieba dictionary in the binary

[dependencies]
lindera-dictionary = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
tokio = { workspace = true }
