[package]
name = "lindera-ko-dic-builder"
version = "0.24.0"
edition = "2021"
description = "A Korean morphological dictionary builder for ko-dic."
documentation = "https://docs.rs/lindera-ko-dic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["korean", "morphological", "dictionary", "builder", "ko-dic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
byteorder = "1.4.3"
csv = "1.1.6"
encoding = "0.2.33"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.17"
yada = "0.5.0"

lindera-compress = { version = "0.24.0", path = "../lindera-compress", optional = true }
lindera-core = { version = "0.24.0", path = "../lindera-core" }
lindera-decompress = { version = "0.24.0", path = "../lindera-decompress" }
