[package]
name = "lindera-ko-dic-builder"
version = "0.27.2"
edition = "2021"
description = "A Korean morphological dictionary builder for ko-dic."
documentation = "https://docs.rs/lindera-ko-dic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["korean", "morphological", "dictionary", "builder", "ko-dic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
encoding.workspace = true
env_logger.workspace = true
glob.workspace = true
log.workspace = true
yada.workspace = true

lindera-compress = { workspace = true, optional = true }
lindera-core.workspace = true
lindera-decompress.workspace = true
