[package]
name = "lindera-ko-dic-builder"
version = "0.32.3"
edition = "2021"
description = "A Korean morphological dictionary builder for ko-dic."
documentation = "https://docs.rs/lindera-ko-dic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["korean", "morphological", "dictionary", "builder", "ko-dic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-dictionary-builder/compress"]

[dependencies]
anyhow.workspace = true

lindera-core.workspace = true
lindera-decompress.workspace = true
lindera-dictionary-builder.workspace = true
