[package]
name = "lindera-ko-dic"
version = { workspace = true }
edition = { workspace = true }
description = "A Korean morphological dictionary for Ko-Dic."
documentation = "https://docs.rs/lindera-ko-dic"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "library", "ko-dic"]
categories.workspace = true
license.workspace = true

[features]
embedded-ko-dic = []                       # Embed Ko-Dic dictionary in the binary
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow.workspace = true
rkyv.workspace = true
byteorder.workspace = true
csv.workspace = true
once_cell.workspace = true
serde_json.workspace = true

lindera-dictionary.workspace = true

[build-dependencies]
serde_json.workspace = true
tokio.workspace = true
lindera-dictionary = { workspace = true, features = ["build_rs"] }
