[package]
name = "lindera-ko-dic"
version = { workspace = true }
edition = { workspace = true }
description = "A Korean morphological dictionary for ko-dic."
documentation = "https://docs.rs/lindera-ko-dic"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "library", "ko-dic"]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-ko-dic = []                          # Embed ko-dic dictionary in the binary
compress = ["lindera-dictionary/compress"]
default = ["compress"]

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
csv = { workspace = true }
lindera-dictionary = { workspace = true }
once_cell = { workspace = true }
rkyv = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde_json = { workspace = true }
tokio = { workspace = true }
