[package]
name = "lindera-nodejs"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
embed-ipadic = ["lindera/embed-ipadic"] # Include Japanese dictionary (IPADIC)
embed-ipadic-neologd = [
    "lindera/embed-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embed-unidic = ["lindera/embed-unidic"] # Include Japanese dictionary (UniDic)
embed-ko-dic = ["lindera/embed-ko-dic"] # Include Korean dictionary (ko-dic)
embed-cc-cedict = [
    "lindera/embed-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
embed-jieba = ["lindera/embed-jieba"] # Include Chinese dictionary (Jieba)
embed-cjk = [
    "lindera/embed-cjk",
] # Embed CJK dictionaries (IPADIC, ko-dic, Jieba)
train = ["lindera/train"] # Enable training functionality
default = ["train"] # Training enabled by default

[dependencies]
lindera = { workspace = true }
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"
num_cpus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
