[package]
name = "lindera-php"
version = { workspace = true }
edition = { workspace = true }
description = "A PHP binding for Lindera."
documentation = "https://docs.rs/lindera-php"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "library", "php", "binding"]
categories = { workspace = true }
license = { workspace = true }

[lib]
name = "lindera_php"
crate-type = ["cdylib", "lib"]

[features]
embed-ipadic = ["lindera/embed-ipadic"] # Include Japanese dictionary (IPADIC)
embed-ipadic-neologd = [
    "lindera/embed-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embed-unidic = ["lindera/embed-unidic"] # Include Japanese dictionary (UniDic)
embed-ko-dic = ["lindera/embed-ko-dic"] # Include Korean dictionary (ko-dic)
embed-cc-cedict = [
    "lindera/embed-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
embed-jieba = ["lindera/embed-jieba"] # Include Chinese dictionary (Jieba)
embed-cjk = [
    "lindera/embed-cjk",
] # Embed CJK dictionaries (IPADIC, ko-dic, Jieba)
train = ["lindera/train"] # Enable training functionality
default = ["train"] # No dictionaries included

[dependencies]
lindera = { workspace = true }
ext-php-rs = "0.15.11"
num_cpus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
