[package]
name = "lindera-tokenizer"
version = "0.27.1"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-tokenizer"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "tokenizer"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []  # No directories included
ipadic = ["lindera-dictionary/ipadic"]  # Include IPADIC dictionary (Japanese)
ipadic-compress = ["lindera-dictionary/ipadic-compress"]  # Compress IPADIC
ipadic-neologd = ["lindera-dictionary/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
ipadic-neologd-compress = ["lindera-dictionary/ipadic-neologd-compress"]  # Compress IPADIC NEologd
unidic = ["lindera-dictionary/unidic"]  # Include UniDic dictionary (Japanese)
unidic-compress = ["lindera-dictionary/unidic-compress"]  # Compress UniDic
ko-dic = ["lindera-dictionary/ko-dic"]  # Include ko-dic dictionary (Korean)
ko-dic-compress = ["lindera-dictionary/ko-dic-compress"]  # Compress ko-dic
cc-cedict = ["lindera-dictionary/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
cc-cedict-compress = ["lindera-dictionary/cc-cedict-compress"]  # Compress CC-CEDICT

[dependencies]
bincode.workspace = true
byteorder.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true

lindera-core.workspace = true
lindera-dictionary.workspace = true

[dev-dependencies]
criterion.workspace = true
once_cell.workspace = true

[[bench]]
name = "bench"
harness = false
