[package]
name = "lindera-tokenizer"
version = "0.32.1"
edition = "2021"
description = "A morphological analysis library."
documentation = "https://docs.rs/lindera-tokenizer"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "tokenizer"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []  # No directories included
ipadic = ["lindera-dictionary/ipadic"]  # Include IPADIC dictionary (Japanese)
ipadic-neologd = ["lindera-dictionary/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
unidic = ["lindera-dictionary/unidic"]  # Include UniDic dictionary (Japanese)
ko-dic = ["lindera-dictionary/ko-dic"]  # Include ko-dic dictionary (Korean)
cc-cedict = ["lindera-dictionary/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
compress = ["lindera-dictionary/compress"]  # Compress dictionaries

[dependencies]
bincode.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true

lindera-core.workspace = true
lindera-dictionary.workspace = true
