[package]
name = "lindera-unidic-builder"
version = "0.27.1"
edition = "2021"
description = "A Japanese morphological dictionary builder for UniDic."
documentation = "https://docs.rs/lindera-unidic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "unidic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
byteorder = "1.4.3"
csv = "1.2.2"
encoding = "0.2.33"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.19"
yada = "0.5.0"

lindera-compress = { version = "0.27.1", path = "../lindera-compress", optional = true }
lindera-core = { version = "0.27.1", path = "../lindera-core" }
lindera-decompress = { version = "0.27.1", path = "../lindera-decompress" }
