[package]
name = "lindera-unidic-builder"
version = "0.27.1"
edition = "2021"
description = "A Japanese morphological dictionary builder for UniDic."
documentation = "https://docs.rs/lindera-unidic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "unidic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
byteorder.workspace = true
csv.workspace = true
encoding.workspace = true
env_logger.workspace = true
glob.workspace = true
log.workspace = true
yada.workspace = true

lindera-compress = { workspace = true, optional = true }
lindera-core.workspace = true
lindera-decompress.workspace = true
