[package]
name = "lindera-unidic-builder"
version = "0.30.0"
edition = "2021"
description = "A Japanese morphological dictionary builder for UniDic."
documentation = "https://docs.rs/lindera-unidic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "unidic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-dictionary-builder/compress"]

[dependencies]
anyhow.workspace = true

lindera-core.workspace = true
lindera-decompress.workspace = true
lindera-dictionary-builder.workspace = true
