[package]
name = "lindera-unidic"
version = { workspace = true }
edition = { workspace = true }
description = "A Japanese morphological dictionary for UniDic."
documentation = "https://docs.rs/lindera-unidic"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["morphological", "analysis", "dictionary", "japanese", "unidic"]
categories = { workspace = true }
license = { workspace = true }

[features]
embed-unidic = [] # Embed UniDic dictionary in the binary

[dependencies]
lindera-dictionary = { workspace = true }

[build-dependencies]
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde_json = { workspace = true }
tokio = { workspace = true }
